// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`encodePostData() handles arrays 1`] = `"data=foo%2Cbar"`;

exports[`encodePostData() handles blob 1`] = `
Array [
  "Blob",
  Array [
    "buffer",
  ],
  Object {
    "type": "text/plain",
  },
]
`;

exports[`encodePostData() handles data with compression 1`] = `"data=content&compression=lz64"`;

exports[`encodePostData() handles objects 1`] = `"data=content"`;

exports[`encodePostData() handles sendBeacon 1`] = `
Array [
  "Blob",
  Array [
    "data=content",
  ],
  Object {
    "type": "application/x-www-form-urlencoded",
  },
]
`;

exports[`encodePostData() handles sendBeacon when blob is also true 1`] = `
Array [
  "Blob",
  Array [
    "data=content",
  ],
  Object {
    "type": "application/x-www-form-urlencoded",
  },
]
`;
